# Terminal-Engine

./: CMakeLists.txt  LICENSE  README.md
cmake/: dev_setup.cmake
examples/: CMakeLists.txt  drawable_entity.cpp  run_app.cpp  simple_entity.cpp
include/term_engine/: application.hpp  data.hpp  entity.hpp  error.hpp  events.hpp  math.hpp  triggers.hpp  world.hpp
src/: application.cpp  clangd_header_indexer.cpp  triggers.cpp  world.cpp
tests/: CMakeLists.txt  add_entity_test.cpp  delete_entity_test.cpp  get_entity_test.cpp  position_trigger_test.cpp
